<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/g1"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_events"
            android:title="@string/nav_events" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_event"
            android:title="@string/nav_infos" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/nav_contact" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_euro"
            android:title="@string/nav_donate" />
    </group>

    <group android:id="@+id/g2">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings"
            android:icon="@drawable/ic_settings"/>
    </group>
</menu>