<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".fragments.ContactFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            style="@style/AppTheme.TitleOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/jbTitle" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp">

            <TableRow
                android:id="@+id/jbRow1"
                android:weightSum="2">
            </TableRow>

            <TableRow
                android:id="@+id/jbRow2"
                android:weightSum="2">
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/uebersicht"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivOverView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            style="@style/AppTheme.TitleOrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/ptTitle" />

        <TextView
            android:id="@+id/tvPTText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvPTMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/mail_pt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/orange" />
    </LinearLayout>
</ScrollView>